# mpdocs-backend

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  pyproject.toml
auth/: models.py  urls.py
core/: permissions.py
docs/api/: schema.yml
periodics/: apps.py  tasks.py
reports/: admin.py  managers.py  models.py  permissions.py  renderers.py  serializers.py  urls.py  utils.py  views.py
reports/migrations/: 0001_initial.py  0002_report_data_report_is_reviewed_report_template.py  0003_alter_report_data.py  0004_remove_reporttemplate_version_and_more.py  0005_reporttemplate_report_end_date_and_more.py  0006_statstemplate_stats.py  0007_delete_stats.py
reports/services/: report_creator.py
scripts/: startup.sh
service/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  views.py
users/migrations/: 0001_initial.py  0002_alter_customuser_patronymic.py
